# people_detector

./: CMakeLists.txt  README  README.md  package.xml
include/: CorrectData.h  ImageDetector.h  LaserDetector.h  PeopleDetector.h  Person.h  person_kf.h
launch/: people_detector.launch  people_detector_bag.launch  people_detector_node.launch  people_detector_test.launch
src/: .Person.cpp.swp  CorrectData.cpp  CorrectDataNode.cpp  ImageDetector.cpp  LaserDetector.cpp  PeopleDetector.cpp  PeopleDetectorNode.cpp  Person.cpp
src/legs_detector/: Makefile  README.md
src/legs_detector/LegsDetector/: LegsDetector.cpp  LegsDetector.h  Makefile  WeakHypothesis.cpp  WeakHypothesis.h  classify.cpp
src/legs_detector/common/: Makefile  MultiScan.cpp  MultiScan.h  Segment.cpp  Segment.h  dynamictable.h  dynamictable.hxx
src/legs_detector/features/: AllFeatures.h  Feature.cpp  Feature.h  Feature_1.cpp  Feature_1.h  Feature_10.cpp  Feature_10.h  Feature_11.cpp  Feature_11.h  Feature_12.cpp  Feature_12.h  Feature_13.cpp  Feature_13.h  Feature_2.cpp  Feature_2.h  Feature_3.cpp  Feature_3.h  Feature_6.cpp  Feature_6.h  Feature_7.cpp  Feature_7.h  Feature_8.cpp  Feature_8.h  Feature_9.cpp  Feature_9.h  Makefile
src/legs_detector/linalg/: .Matrix.hh.swp  Arguments.cc  Arguments.hh  Exception.cc  Exception.hh  Makefile  Matrix.cc  Matrix.hh  Vector.cc  Vector.hh  macros.h
